kubernetes/server-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-taft-dep
  labels:
    app: server-taft-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server-taft-pod
  template:
    metadata:
      labels:
        app: server-taft-pod
    spec:
      containers:
        - name: server-taft-dep
          # Replace the image below with the image name/tag you will deploy.
          image: server:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
