kubernetes/client-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: taft
  name: client-taft-svc
spec:
  selector:
    app: client-taft-pod
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
