kubernetes/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: taft
  name: postgres-svc
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: postgres-pod
