kubernetes/server-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: taft
  name: server-taft-svc
spec:
  selector:
    app: server-taft-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
