kubernetes/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-taft-ingress
  annotations:
    # If your app expects NO /api prefix internally, keep these to strip it:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: schedular-app.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-taft-svc
                port:
                  number: 80
